# stretchtheirlegs-website

./: .dockerignore  .gitattributes  .gitignore  .mergify.yml  .pre-commit-config.yaml  Dockerfile  Gruntfile.js  Makefile  Procfile  README.md  manage.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  pytest.ini  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  setup.cfg  tach.toml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: main.yml  updates.yml  upgrade.yaml
articles/: apps.py  models.py
articles/migrations/: 0001_initial.py  0002_articallist_body.py  0003_remove_artical_banner_sub_title_and_more.py  0004_rename_articallist_article_and_more.py  0005_article_date_article_image.py  0006_rename_image_article_banner_image.py  0007_article_summary_alter_article_sub_heading.py  0008_articlelist_list_title.py  0009_articlelist_collection_title.py  0010_alter_articlelist_collection_title.py  0011_alter_articlelist_collection_title.py  0012_alter_articlelist_collection_title.py
articles/templates/articles/: article.html  article_list.html
banners/: apps.py  fields.py  models.py  tests.py  wagtail_hooks.py
banners/migrations/: 0001_initial.py  0002_alter_banner_show_from_alter_banner_show_to.py  0003_alter_banner_show_from_alter_banner_show_to.py  0004_alter_banner_options_alter_banner_managers.py
banners/templatetags/: banner_tags.py
fh_utils/: __init__.py  admin.py  apps.py  exceptions.py  fields.py  managers.py  models.py  utils.py
fh_utils/tests/: __init__.py  abstract_mixin.py  test_date_period.py  test_date_rangers.py  test_date_ranges.py  test_dates.py  test_easter.py  test_managers.py  test_status.py
home/: models.py
js/: effect.ts  pre-load.ts  stl.ts
logos/: apps.py  models.py  wagtail_hooks.py
logos/migrations/: 0001_initial.py  0002_logo_title_alter_logo_logo.py  0003_logo_fireworks.py  0004_logo_snow.py  0005_logo_effect.py  0006_alter_logo_effect.py  0007_alter_logo_effect.py  0008_logo_easter.py  0009_alter_logo_options_alter_logo_easter.py
logos/templates/tags/: effects.html  fireworks.html  logo.html
logos/templatetags/: logo_tags.py
logos/tests/: test_easter.py  test_effects.py
modulestatus/: apps.py  managers.py
modulestatus/tests/: __init__.py  abstract_mixin.py  test_daterangers.py  test_dates.py  test_models.py  test_status.py
pages/: apps.py  blocks.py  models.py  tests.py  utils.py
pages/management/commands/: allnav.py
pages/migrations/: 0001_initial.py  0002_formpage_servicepage.py  0003_menupage.py  0004_homepage_body.py  0005_servicepage_body_servicepage_image_and_more.py  0006_alter_homepage_body_and_more.py  0007_membership.py  0008_sitesettings.py  0009_remove_sitesettings_google_maps_api_key_and_more.py  0010_infopage_body.py  0011_formpage_body_formpage_submit_text_and_more.py  0012_alter_formfield_choices_and_more.py  0013_alter_homepage_body_alter_infopage_body.py  0014_alter_homepage_body_alter_infopage_body.py  0015_homepage_banner_sub_title_homepage_banner_title.py  0016_servicepage_sub_title.py  0017_formpage_sub_title.py  0018_rename_sub_title_formpage_sub_heading_and_more.py
pages/templates/pages/: form_page.html  form_page_landing.html  home_page.html  info_page.html  service_page.html
pages/templates/pages/blocks/: flex_block.html  form.html  image_row.html  item.html  services.html
pages/templates/tags/: membership_list.html  menu.html
pages/templatetags/: membership_tags.py  navigation_tags.py  util_tags.py
pages/tests/: test_form_page.py  test_home_page.py  test_navigation_tags.py  test_shorten_label.py  test_util_tags.py  tests_pages.py
robots/: apps.py  models.py  urls.py  views.py
robots/migrations/: 0001_initial.py
scss/: _external.scss  _imports.scss  _mixins.scss  _variables.scss  main.scss
scss/layout/: _404.scss  __defaults.scss  __typography.scss  _articles.scss  _banner.scss  _breadcrumbs.scss  _container.scss  _effects.scss  _error-pages.scss  _fireworks.scss  _footer.scss  _form.scss  _header.scss  _image_row.scss  _item.scss  _memberships.scss  _messages.scss  _nav.scss  _nav_icon.scss  _pagination.scss  _service.scss
scss/mixins/: _in-size.scss  _triangle.scss
search/: views.py
site_messages/: apps.py  models.py  tests.py  urls.py  views.py  wagtail_hooks.py
site_messages/migrations/: 0001_initial.py  0002_alter_message_options_alter_message_managers.py
site_messages/templates/tags/: site_messages.html
site_messages/templatetags/: message_tags.py
social/: apps.py  models.py  tests.py
social/migrations/: 0001_initial.py  0002_social_delete_ogtag.py  0003_social_json_ld.py
social/templates/tags/: social_tags.html
social/templatetags/: social_tags.py
stl/: asgi.py  middleware.py  tests.py  urls.py  wsgi.py
stl/settings/: base.py  circleci.py  dev.py  production.py  testing.py
stl/static/css/: main.css  main.css.map  main.min.css  main.min.css.map
stl/static/favicon/: browserconfig.xml  site.webmanifest
stl/static/js/: fireworks.js  stl.js  stl.js.map  stl.min.js  stl.min.js.map
stl/templates/: 404.html  500.html  base.html  breadcrumbs.html  favicon.html  footer.html  header.html
templates/: favicon.html
wagtail/: Chart.yaml  values.yaml
wagtail/templates/: deployment.yaml
